--- a/projects/rt-state-reset/package.json
+++ b/projects/rt-state-reset/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "rt-platform",
-  "version": "0.0.2",
+  "name": "rt-state-reset",
+  "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^10.1.6",
-    "@angular/core": "^10.1.6"
+    "@angular/core": "^10.1.6",
+    "@ngxs/store": "^3.7.2"
   },
   "dependencies": {
     "tslib": "^2.0.0"
