--- a/angular.json
+++ b/angular.json
@@ -203,6 +203,46 @@
           }
         }
       }
+    },
+    "rt-messages": {
+      "projectType": "library",
+      "root": "projects/rt-messages",
+      "sourceRoot": "projects/rt-messages/src",
+      "prefix": "rt",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "tsConfig": "projects/rt-messages/tsconfig.lib.json",
+            "project": "projects/rt-messages/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/rt-messages/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/rt-messages/src/test.ts",
+            "tsConfig": "projects/rt-messages/tsconfig.spec.json",
+            "karmaConfig": "projects/rt-messages/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/rt-messages/tsconfig.lib.json",
+              "projects/rt-messages/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }},
   "defaultProject": "rt-angular-lib"
 }
